# modsync

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.sqlx/: query-204ea01cc54b2698088b78f91c99e3d63f60b38a8b3e224b37ddb12324e404a6.json  query-27a4e7fdd5ec4127c5fb22eced8f519f892007e2ad119f480b155aa117605c97.json  query-2e40ac91d86718e32b87c828c9fbb6efafab1bc06993764246338c3dd00effb4.json  query-37044e4615b7dbfc94b21da7de012ddd970d9cb868b52bdac63cc3ab1aa0b391.json  query-3e953644a7f9f03ddcead7b79d4976798c75f01aa124e488743c99be57df40fa.json  query-475bfffdac2698f67814407089b913c5f688ed5f22873a6845aa85743e86386e.json  query-5e9f77ee94c874900db47547ee4bb2aae222a9c79c791ce8b474021fdb40c29b.json  query-8ebd7b47cd1f61118b86075e745fe2fb421eae7564016909780400cbb86c8c1f.json  query-968d7c12401091f323e2a7048e38fa8b3e8fda9b0bbceceeb0ac035b68ff0ec6.json  query-a110deab830b41c920f21168d642cb6ccb76736083773ffc0dbf01078dca429c.json  query-b60bea8acca0db33be3d8f2ea92e039220c19eab4f08afe4b6954518874edd46.json  query-bf6a96eaf1e558af5fdfe8de76cc4c19eb2f999dee21f8909e98a0a319cbbd21.json  query-c017878071f6853e36d5b46766c6c02510d8b271f334b442c54cbfcaaa7c0768.json  query-e46b3989f328fe4803bee84934c0aec690767b9cc0b7faac8fb253463234ae5b.json
modsync_cli/: Cargo.toml
modsync_cli/src/: main.rs  sync.rs
modsync_client/: Cargo.toml
modsync_client/src/: main.rs
modsync_core/: Cargo.toml
modsync_core/src/: lib.rs
modsync_core/src/api/: mod.rs
modsync_core/src/models/: files.rs  mod.rs  modpacks.rs
modsync_server/: Cargo.toml
modsync_server/migrations/: 20241003112919_initial.sql
modsync_server/src/: main.rs
modsync_server/src/server/: error.rs  mod.rs
modsync_server/src/server/models/: files.rs  mod.rs  modpacks.rs
