[package]
name = "modsync_cli"
version = "0.2.0"
edition = "2021"

[dependencies]
modsync_core = { path = "../modsync_core" }
tokio = { version = "1.40", features = [ "full" ] }
serde = "1.0.210"
toml = "0.8.19"
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
sha2 = "0.10.8"
reqwest = { version = "0.12.7", features = ["json", "multipart"] }
thiserror = "1.0.64"
globset = "0.4.15"
walkdir = "2.5.0"
ignore = "0.4.23"
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
colored = "2.1.0"

