[package]
name = "modsync_client"
version = "0.2.1"
edition = "2021"

[dependencies]
modsync_core = { path = "../modsync_core" }
tokio = { version = "1.40", features = ["full"] }
serde = "1.0.210"
anyhow = "1.0.89"
dotenvy = "0.15.7"
log = "0.4.22"
toml = "0.8.19"
colored = "2.1.0"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
clap = { version = "4.5.18", features = ["derive"] }
sha2 = "0.10.8"
pretty_env_logger = "0.5.0"
futures-util = "0.3.30"
indicatif = "0.17.8"

