[package]
name = "modsync_server"
version = "0.2.0"
edition = "2021"

[dependencies]
modsync_core = { path = "../modsync_core" }
dotenvy = "0.15.7"
tokio = { version = "1.40", features = [ "full" ] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring", "postgres", "macros", "chrono" ] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "env-filter" ] }
axum = { version = "0.7.7", features = [ "http2", "macros", "multipart" ] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
serde = "1.0.210"
toml = "0.8.19"
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
sha2 = "0.10.8"
uuid = { version = "1.10.0", features = ["v4"] }
reqwest = { version = "0.12.7", features = ["json", "multipart"] }
thiserror = "1.0.64"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["timeout", "util", "limit", "compression-deflate", "fs", "trace"] }
globset = "0.4.15"
glob = "0.3.1"
walkdir = "2.5.0"
ignore = "0.4.23"
chrono = { version = "0.4.38", features = ["serde"] }

